force-app/main/default/objects/Feature_Flag__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Feature description</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>