force-app/main/default/objects/Feature_Flag__mdt/fields/Enterprise_Tier_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Tier_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Available on Enterprise</description>
    <label>Enterprise</label>
    <type>Checkbox</type>
</CustomField>