force-app/main/default/objects/Feature_Flag__mdt/fields/Free_Tier_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Free_Tier_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Available on Free</description>
    <label>Free Tier</label>
    <type>Checkbox</type>
</CustomField>