force-app/main/default/objects/Feature_Flag__mdt/fields/Free_Tier_Limit__c.field-meta.xml
<CustomField>
    <fullName>Free_Tier_Limit__c</fullName>
    <description>Usage limit for Free</description>
    <label>Free Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>