force-app/main/default/objects/Feature_Flag__mdt/fields/Professional_Tier_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Professional_Tier_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Available on Pro</description>
    <label>Pro Tier</label>
    <type>Checkbox</type>
</CustomField>