force-app/main/default/objects/Feature_Flag__mdt/fields/Professional_Tier_Limit__c.field-meta.xml
<CustomField>
    <fullName>Professional_Tier_Limit__c</fullName>
    <description>Usage limit for Pro</description>
    <label>Pro Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>